--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon -e ts,js,json ./src/server.ts"
   },
   "author": "tomorrow",
   "license": "ISC",
@@ -27,9 +28,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
     "sharp": "^0.32.4",
+    "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   }
 }
