commiting updates from Aug 4

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ PORT=3200
 
 BASE_URL=http://localhost:3200
 MONGO_DB_DATABASE_PORT=mongodb://localhost:27017/olx
+
+SMTP_GMAIL_HOST=smtp.gmail.com
+SMTP_GMAIL_PORT=465
+SMTP_MAILTRAP_HOST=smtp.mailtrap.io
+SMTP_MAILTRAP_PORT=2525
+SMTP_USERNAME=olx@tomorrow.com
+SMTP_PASSWORD=bcnmxksdsxkgthwy
