--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.9",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -31,6 +32,7 @@
     "express-validator": "^7.0.1",
     "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "sharp": "^0.32.4",
     "ts-node": "^10.9.1",
