--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=3200
 
 BASE_URL=http://localhost:3200
+MONGODB_URI=mongodb+srv://tomorrow:krvKrP4y8mVmf9ua@cluster0.2v5zljq.mongodb.net/olx-api
 MONGO_DB_DATABASE_PORT=mongodb://localhost:27017/olx
 
 SMTP_GMAIL_HOST=smtp.gmail.com
