--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ PORT=3200
 BASE_URL=https://olx-api.onrender.com
 MONGODB_URI=mongodb+srv://tomorrow:krvKrP4y8mVmf9ua@cluster0.2v5zljq.mongodb.net/olx-api
 MONGO_DB_DATABASE_PORT=mongodb://localhost:27017/olx
+TEST_PORT=3000
